<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hprnetwork.talkbackplayer.PlayerActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_main_album_cover"
            android:src="@drawable/ic_headset_black_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/desc_playing"
            android:longClickable="true"
            android:focusable="true"
            android:layout_alignBottom="@+id/imageView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:id="@+id/main_song_title"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:layout_marginLeft="8dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/image_main_album_cover" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:contentDescription="@string/desc_menu"
            android:layout_alignBottom="@+id/main_song_title"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@android:drawable/ic_menu_search"
            android:contentDescription="@string/desc_search"
            android:layout_marginEnd="20dp"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_toStartOf="@+id/imageView2" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/mj_history"
            android:contentDescription="@string/desc_album_cover"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0.05">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:id="@+id/play_song_title"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_artist"
            android:id="@+id/main_song_artist"
            android:layout_marginLeft="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/play_song_title"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/1"
            android:id="@+id/textView"
            android:layout_marginLeft="8dp"
            android:textAlignment="textEnd"
            android:layout_below="@+id/play_song_title"
            android:layout_alignParentEnd="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:03"
            android:id="@+id/textView2"
            android:textSize="10dp"
            android:layout_above="@+id/seekBar2"
            android:layout_alignStart="@+id/main_song_artist" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="04:42"
            android:id="@+id/textView3"
            android:textSize="10dp"
            android:layout_above="@+id/seekBar2"
            android:layout_alignParentEnd="true" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar2"
            android:contentDescription="@string/desc_time_bar"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/play_mode"
            android:src="@drawable/ic_repeat_black_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/desc_play_mode"
            android:longClickable="true"
            android:focusable="true" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/previous"
            android:src="@drawable/ic_skip_previous_black_24dp"
            android:contentDescription="@string/desc_previous"
            android:longClickable="true"
            android:focusable="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/play_mode" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/play"
            android:src="@drawable/ic_play_circle_outline_black_24dp"
            android:contentDescription="@string/desc_play"
            android:longClickable="true"
            android:focusable="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/next"
            android:src="@drawable/ic_skip_next_black_24dp"
            android:contentDescription="@string/desc_next"
            android:longClickable="true"
            android:focusable="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/random" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/random"
            android:src="@drawable/ic_shuffle_black_24dp"
            android:contentDescription="@string/desc_random"
            android:longClickable="true"
            android:focusable="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</LinearLayout>
