<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="420dp">

        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.hprnetwork.talkbackplayer.MainActivity"


            android:layout_gravity="top"
            android:paddingBottom="12dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_gravity="bottom"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_main_album_cover"
                android:src="@drawable/mj_history_thumb"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/album_cover"
                android:longClickable="true"
                android:layout_alignBottom="@+id/main_song_artist"
                android:focusable="true"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_title"
                android:id="@+id/main_song_title"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/image_main_album_cover" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_artist"
                android:id="@+id/main_song_artist"
                android:layout_marginLeft="8dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/main_song_title"
                android:layout_toEndOf="@+id/image_main_album_cover" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@android:drawable/ic_menu_search"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="Suchen" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_below="@+id/image_main_album_cover"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>